--- a/.github/workflows/pr-release.yml
+++ b/.github/workflows/pr-release.yml
@@ -40,8 +40,8 @@ jobs:
           git clone --depth 1 --bare https://github.com/${{ github.repository_owner }}/lean4.git
           git -C lean4.git fetch origin ${{ steps.workflow-info.outputs.sourceheadsha }}
           git -C lean4.git remote add pr-releases https://foo:'${{ secrets.PR_RELEASES_TOKEN }}'@github.com/${{ github.repository_owner }}/lean4-pr-releases.git
-          git tag -f pr-release-${{ steps.workflow-info.outputs.pullRequestNumber }} ${{ steps.workflow-info.outputs.sourceHeadSha }}
-          git push -f pr-releases pr-release-${{ steps.workflow-info.outputs.pullRequestNumber }}
+          git -C lean4.git tag -f pr-release-${{ steps.workflow-info.outputs.pullRequestNumber }} ${{ steps.workflow-info.outputs.sourceHeadSha }}
+          git -C lean4.git push -f pr-releases pr-release-${{ steps.workflow-info.outputs.pullRequestNumber }}
       - name: Delete existing release if present
         if: ${{ steps.workflow-info.outputs.pullRequestNumber != '' }}
         run: |
