--- a/.github/workflows/pr-release.yml
+++ b/.github/workflows/pr-release.yml
@@ -21,16 +21,17 @@ jobs:
       - name: Retrieve PR number and head commit
         uses: actions/github-script@v7
         id: workflow-info
-        script: |
-          const reply = await github.rest.actions.getWorkflowRun({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              run_id: context.payload.workflow_run.id,
-          })
-          return {
-            pr = reply.data.pull_requests[0].number,
-            sha = reply.data.pull_requests[0].head.sha,
-          }
+        with:
+          script: |
+            const reply = await github.rest.actions.getWorkflowRun({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                run_id: context.payload.workflow_run.id,
+            })
+            return {
+              pr = reply.data.pull_requests[0].number,
+              sha = reply.data.pull_requests[0].head.sha,
+            }
 
       - name: Download artifact from the previous workflow.
         if: ${{ steps.workflow-info.outputs.result.pr != '' }}
