No --single-branch, need tag information

--- a/.github/workflows/pr-release.yml
+++ b/.github/workflows/pr-release.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Push branch and tag
         if: ${{ steps.workflow-info.outputs.pullRequestNumber != '' }}
         run: |
-          git clone --single-branch --bare https://github.com/${{ github.repository_owner }}/lean4.git
+          git clone --bare https://github.com/${{ github.repository_owner }}/lean4.git
           git -C lean4.git fetch origin ${{ steps.workflow-info.outputs.sourceHeadSha }}
           git -C lean4.git remote add pr-releases https://foo:'${{ secrets.PR_RELEASES_TOKEN }}'@github.com/${{ github.repository_owner }}/lean4-pr-releases.git
           git -C lean4.git tag -f pr-release-${{ steps.workflow-info.outputs.pullRequestNumber }} ${{ steps.workflow-info.outputs.sourceHeadSha }}
