--- a/.github/workflows/pr-release.yml
+++ b/.github/workflows/pr-release.yml
@@ -45,9 +45,9 @@ jobs:
         if: ${{ steps.workflow-info.outputs.pullRequestNumber != '' }}
         run: |
           git clone --bare https://github.com/${{ github.repository_owner }}/lean4.git
-          git -C lean4.git fetch origin ${{ steps.workflow-info.outputs.sourceHeadSha }}
+          git -C lean4.git fetch origin "${{ steps.workflow-info.outputs.sourceHeadSha }}"
           git -C lean4.git remote add pr-releases https://foo:'${{ secrets.PR_RELEASES_TOKEN }}'@github.com/${{ github.repository_owner }}/lean4-pr-releases.git
-          git -C lean4.git tag -f pr-release-${{ steps.workflow-info.outputs.pullRequestNumber }} ${{ steps.workflow-info.outputs.sourceHeadSha }}
+          git -C lean4.git tag -f pr-release-${{ steps.workflow-info.outputs.pullRequestNumber }} "${{ steps.workflow-info.outputs.sourceHeadSha }}"
           git -C lean4.git push -f pr-releases pr-release-${{ steps.workflow-info.outputs.pullRequestNumber }}
       - name: Delete existing release if present
         if: ${{ steps.workflow-info.outputs.pullRequestNumber != '' }}
@@ -97,7 +97,7 @@ jobs:
           echo "Most recent nightly: $MOST_RECENT_NIGHTLY"
           NIGHTLY_SHA=$(git ls-remote https://github.com/leanprover/lean4-nightly.git nightly-2023-12-04|cut -f1)
           echo "SHA of most recent nightly: $NIGHTLY_SHA"
-          MERGE_BASE_SHA=$(git -C lean4.git merge-base origin/master ${{ steps.workflow-info.outputs.sourceHeadSha }})
+          MERGE_BASE_SHA=$(git -C lean4.git merge-base origin/master "${{ steps.workflow-info.outputs.sourceHeadSha }}")
           echo "SHA of merge-base: $MERGE_BASE_SHA"
           if [ "$NIGHTLY_SHA" = "$MERGE_BASE_SHA" ]; then
             echo "Most recent nightly tag agrees with the merge base."
