Only run when stdlib flags disagree

--- a/.github/workflows/update-stage0.yml
+++ b/.github/workflows/update-stage0.yml
@@ -13,13 +13,32 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - uses: DeterminateSystems/nix-installer-action@main
-    - uses: DeterminateSystems/magic-nix-cache-action@v2
-    - name: Install Cachix
+    - name: Check if update is needed
+      run: |
+        if diff -u src/stdlib_flags.h  stage0/src/stdlib_flags.h
+        then
+          echo "src/stdlib_flags.h and stage0/src/stdlib_flags.h agree, nothing to do"
+          echo "DOIT=no" >> "$GITHUB_ENV"
+        else
+          echo "DOIT=yes" >> "$GITHUB_ENV"
+        fi
+    - if: env.DOIT == 'yes'
+      uses: DeterminateSystems/nix-installer-action@main
+    - if: env.DOIT == 'yes'
+      uses: DeterminateSystems/magic-nix-cache-action@v2
+    - if: env.DOIT == 'yes'
+      name: Install Cachix
       uses: cachix/cachix-action@v12
       with:
         name: lean4
-    - run: nix build .#update-stage0-commit
-    - run: nix run .#update-stage0-commit
-    - run: git show --stat
-    - run: git push origin HEAD:master
+    - if: env.DOIT == 'yes'
+      run: nix build .#update-stage0-commit
+    - if: env.DOIT == 'yes'
+      run: nix run .#update-stage0-commit
+    - if: env.DOIT == 'yes'
+      run: git show --stat
+    - name: Sanity check
+      run: |
+        diff -u src/stdlib_flags.h  stage0/src/stdlib_flags.h || exit 1
+    - if: env.DOIT == 'yes'
+      run: git push origin HEAD:master
