--- a/.github/workflows/pr-release.yml
+++ b/.github/workflows/pr-release.yml
@@ -19,32 +19,14 @@ jobs:
     if: github.event.workflow_run.conclusion == 'success' && github.event.workflow_run.event == 'pull_request' && github.repository == 'leanprover/lean4'
     steps:
       - name: Retrieve PR number and head commit
-        uses: actions/github-script@v7
         id: workflow-info
-        with:
-          script: |
-            const run_id = context.payload.workflow_run.id;
-            console.log(`Querying workflow run data for run_id ${run_id}.`);
-            
-            github.rest.actions.getWorkflowRun({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                run_id: run_id
-            })
-            .then(reply => {
-                if (reply.data.pull_requests && reply.data.pull_requests.length > 0) {
-                    core.setOutput('pullRequestNumber', reply.data.pull_requests[0].number);
-                    core.setOutput('sourceHeadSha', reply.data.pull_requests[0].head.sha);
-                } else {
-                    console.log("Odd, no pull-request-data in workflow data?");
-                    console.log(`reply.data: ${JSON.stringify(reply.data, null, 2)}`);
-                    core.setFailed("Unexpected result from github.rest.actions.getWorkflowRun");
-                }
-            })
-            .catch(error => {
-                console.error(error);
-                core.setFailed("Error querying workflow run data: " + error.message);
-            });
+        run: |
+          # It is surprising hard to reliably get the pull request number in workflow_run;
+          # the context often has an empty pull_requests array, e.g. with PRs from forks
+          # The trick below was suggested at
+          # https://github.com/orgs/community/discussions/25220#discussioncomment-7551168
+          gh pr view -R "${{ github.repository }}" "${{ github.event.workflow_run.head_repository.owner.login }}:${{ github.event.workflow_run.head_branch }}" \
+            --json number,headRefOid --jq '"pullRequestNumber=\(.number)\nsourceHeadSha=\(.headRefOid)"' > $GITHUB_OUTPUT
       - name: Download artifact from the previous workflow.
         if: ${{ steps.workflow-info.outputs.pullRequestNumber != '' }}
         id: download-artifact
